--- a/GetLocationInBackground/Info.plist
+++ b/GetLocationInBackground/Info.plist
@@ -20,6 +20,10 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>location</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
@@ -41,5 +45,11 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>取得使用者位置</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>取得使用者位置</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>取得使用者位置</string>
 </dict>
 </plist>
